Wed Feb  6 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* dbprovider.c+.h, gnubg.c, relational.c, gtkrelational.c, database.py:
	Move relational code out of database.py and into relational.c

Sun Feb  3 16:34:37 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkboard.c: size cube and dice widgets according to board size
	* gtkgame.c, gtkpanels.c, gtkprefs.c, gtkrelational.c, gtktheory.c:
	replace deprecated gtk_widget_set_usize with
	gtk_widget_set_size_request

Sun Feb  3 01:02:54 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, relational.c, scripts/database.py: allow creation of
	default sqlite database in szHomeDirectory. Look for database conf
	file in szHomeDirectory. MIGHT DISTURB EXISTING USERS?

Sun Feb  3 00:47:49 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, gtksplash.c: disable splash unless asked for. Shorten
	pauses a bit

Thu Jan 31 17:20:11 CET 2008 Christian Anthon <anthon@kiku.dk>

	* multithread.c: check if g_threads already initialized.

Mon Jan 21 00:36:53 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, dice.c, eval.c, gnubg.c, gtkboard.c, gtkexport.c,
	gtkoptions.c, import.c, makebearoff.c, makehyper.c, relational.c,
	render.c, rollout.c, sgf.c: replace uint with unsigned int

Sat Jan 19 21:45:51 CET 2008 Christian Anthon <anthon@kiku.dk>

	* eval.c: fix a potential signed/unsigned problem in crashed net

Sat Jan 19 09:58:13 CET 2008 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: fix board after uint changes

Tue Jan 15 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg-types.h + others: change board type to unsigned
		hopefully not breaking anything on the way (esp. bearoff)

Tue Jan 15 19:05:58 CET 2008 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, dice.c, eval.c, gnubg.c, gtkboard.c,
	gtkexport.c, gtkgame.c, gtkmovelist.c, gtkoptions.c, import.c,
	makebearoff.c, makehyper.c, multithread.c, play.c, render.c, sgf.c,