@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: gnubg.c,v 1.756 2008/02/07 09:21:43 c_anthon Exp $
+ * $Id: gnubg.c,v 1.757 2008/02/07 22:29:36 Superfly_Jon Exp $
  */
 
 #include "config.h"
