@@ -1,3 +1,7 @@
+Thu Feb  7 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* dbprovider.c: Added native sqlite interface.
+
 Wed Feb  6 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* dbprovider.c+.h, gnubg.c, relational.c, gtkrelational.c, database.py:
